# PicoStation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cmd.c  cmd.cpp  cmd.h  disc_image.cpp  disc_image.h  hw_config.c  hw_config.cpp  i2s.c  i2s.cpp  i2s.h  logging.h  main.c  main.cpp  main.pio  picostation.cpp  picostation.h  setup_env.sh  subq.c  subq.cpp  subq.h  utils.c  utils.cpp  utils.h  values.h
.github/workflows/: Bundle.yml
app/: main.cpp  picostation.cpp  picostation.h
app/commands/: cmd.cpp  cmd.h  custom_commands.cpp  custom_commands.h  mech_commands.cpp  mech_commands.h
app/commons/: listingBuilder.h  logging.h  values.h
app/emulation/: disc_image.cpp  disc_image.h  drive_mechanics.cpp  drive_mechanics.h  i2s.cpp  i2s.h  modchip.cpp  modchip.h  subq.cpp  subq.h
app/systems/: directory_listing.cpp  fw_update.cpp  fw_update.h  si5351.c  si5351.h
boards/: picostation_pico1.cmake  picostation_pico2.cmake  picostation_pinout.h.in  picostation_plus_pico1.cmake  picostation_plus_pico2.cmake  picostation_variant.cmake
firmware/ps1/: video_override.c  video_override.h
include/: cmd.h  debug.h  directory_listing.h  disc_image.h  drive_mechanics.h  ffconf.h  firmware_update.h  global.h  i2s.h  image_selector.h  listingBuilder.h  logging.h  modchip.h  picostation.h  pseudo_atomics.h  subq.h  uf2_flasher.h  uf2_patched.h  utils.h  values.h
pico/boards/: picostation_plus_pico2.cmake
pico/pio/: main.pio
pio/: main.pio
src/: cmd.cpp  cmd.h  debug.cpp  directory_listing.cpp  disc_image.cpp  disc_image.h  drive_mechanics.cpp  drive_mechanics.h  filesystem.h  firmware_update.cpp  hw_config.cpp  i2s.cpp  i2s.h  image_selector.cpp  loaderImage.h  logging.h  main.cpp  modchip.cpp  modchip.h  picostation.cpp  picostation.h  pseudo_atomics.h  si5351.c  subq.cpp  subq.h  uf2_flasher.cpp  utils.cpp  utils.h  values.h
tools/: bootsel.sh  patch_boot.py
utils/: patch_boot.py
